--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hello-pangea/dnd": "^16.2.0",
     "@hookform/resolvers": "^3.1.1",
     "@jsdevtools/rehype-toc": "^3.0.2",
+    "@lemonsqueezy/lemonsqueezy.js": "^4.0.0",
     "@linaria/core": "^6.2.0",
     "@linaria/react": "^6.2.1",
     "@mdx-js/react": "^3.0.0",
